# swiftifyy

./: Dockerfile  README.md  TODO.md  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  tailwind.config.js
backend/: .env.example  README.md  main.py  pyproject  render.yaml  requirements.txt
src/: App.tsx
src/components/Home/: AppTeaser.tsx  BlogTeaser.tsx  CoverageMap.tsx  FAQ.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Partners.tsx  Stats.tsx  Sustainability.tsx  Testimonials.tsx
src/components/Layout/: Footer.tsx  Navbar.tsx
src/components/Maps/: LeafletMap.tsx  MapContainer.tsx
src/components/UI/: SearchModal.tsx
src/contexts/: AdminContext.tsx  ThemeContext.tsx  TrackingContext.tsx
src/lib/: api.ts  maps.ts  notifications.ts  supabase.ts  tracking.ts
src/pages/: About.tsx  AdminDashboard.tsx  AdminLogin.tsx  Contact.tsx  Home.tsx  NotFound.tsx  Schedule.tsx  Track.tsx
