[tool.poetry]
name = "swiftify-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.30.0"}
python-jose = {extras = ["cryptography"], version = "3.3.0"}
python-multipart = "0.0.9"
python-dotenv = "1.0.0"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
supabase = "2.6.0"
requests = "2.32.0"
pydantic = "2.9.0"
websockets = "13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
